--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -13,7 +13,7 @@
     <h2>Before Shopping for Cars, We Must Verify Your Identity</h2>
     <form id="verification-form">
    <label for="age-select">Select Your Age Range:</label>
-<select id="age-select" multiple>
+<select id="age-select" multiple required>
   <option value="18-20" selected>18-20</option>
   <option value="21-30" selected>21-30</option>
   <option value="31-40" selected>31-40</option>
