--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <br>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter 7">Chapter 7</a>
             <br>
+             <a href="https://jacksonl11.github.io/ClientSide23/Chapter 9">Chapter 9</a
+                 <br>
             <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
             <br>
             <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
