--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <br>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter 7">Chapter 7</a>
             <br>
-             <a href="https://jacksonl11.github.io/ClientSide23/Chapter 9">Chapter 9</a
+             <a href="https://jacksonl11.github.io/ClientSide23/Chapter9/Project 9-1">Chapter 9</a
                  <br>
             <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
             <br>
