--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                  <br>
             <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
             <br>
+                  <a href="https://jacksonl11.github.io/ClientSide23/Chapter 12">Chapter 12</a
+                 <br>
+                 
             <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
         </nav>
         </div>
