--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1>Clientside Portfolio</h1>
         <h2>Jackson Lawrence</h2>
         <nav>
+            <a href="https://jacksonl11.github.io/ClientSide23/Final Project">Final Project</a>
+            <br>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter1">Chapter 1</a>
             <br>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter2">Chapter 2</a>
