--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -52,6 +52,7 @@
           model, and trim of cars that one might consider purchasing. Your script will link the three selection lists 
           so that selecting a car make will filter the list of car models and selecting a car model will filter 
           the list of car trims. (See more details on Canvas and in the textbook)</p>
+	        <p><a href="https://jacksonl11.github.io/ClientSide23/Final%20Project/Project 6-4">Go to project...</a></p>
       </div>
       <div class="grid-item">
         <h2>Project: Hands-On Project 9-4</h2>
