--- a/Final Project/Project 6-4/index.html
+++ b/Final Project/Project 6-4/index.html
@@ -129,5 +129,8 @@
       </form>
       <p id="vehicle"></p>
    </article>      
+   <footer>
+      <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project/"></a>
+   </footer>
 </body>
 </html>
