--- a/Final Project/Project 6-4/index.html
+++ b/Final Project/Project 6-4/index.html
@@ -130,7 +130,7 @@
       <p id="vehicle"></p>
    </article>      
    <footer>
-      <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a
+      <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
    
    </footer>
 </body>
