--- a/Final Project/Project 6-4/index.html
+++ b/Final Project/Project 6-4/index.html
@@ -123,19 +123,19 @@
                <option class="Sienna">Limited 7-Passenger 4dr Minivan (3.5L 6cyl 6A)</option>                     
             </select>              
             <select id="year">
-  <option value="">--Select Year--</option>
-  <option value="2010">2010</option>
-  <option value="2011">2011</option>
-  <option value="2012">2012</option>
-  <option value="2013">2013</option>
-  <option value="2014">2014</option>
-  <option value="2015">2015</option>
-  <option value="2016">2016</option>
-  <option value="2017">2017</option>
-  <option value="2018">2018</option>
-  <option value="2019">2019</option>
-  <option value="2020">2020</option>
-  <option value="2021">2021</option>
+  <option class="">--Select Year--</option>
+  <option class="2010">2010</option>
+  <option class="2011">2011</option>
+  <option class="2012">2012</option>
+  <option class="2013">2013</option>
+  <option class="2014">2014</option>
+  <option class="2015">2015</option>
+  <option class="2016">2016</option>
+  <option class="2017">2017</option>
+  <option class="2018">2018</option>
+  <option class="2019">2019</option>
+  <option class="2020">2020</option>
+  <option class="2021">2021</option>
          </fieldset>
          
          <input type="button" value="Select" id="selectVehicle" />
