--- a/Final Project/Project 6-4/index.html
+++ b/Final Project/Project 6-4/index.html
@@ -121,9 +121,10 @@
                <option class="RAV4">LE 4dr SUV (2.5L 4cyl 6A)</option>
                <option class="Sienna">L 7-Passenger 4dr Minivan (3.5L 6cyl 6A)</option>  
                <option class="Sienna">Limited 7-Passenger 4dr Minivan (3.5L 6cyl 6A)</option>                     
-            </select>              
-            <select id="year">
-  <option class="">--Select Year--</option>
+            </select>           
+            <legend>Year</legend>
+            <select id="year" size = "4">
+  <option>Select Year</option>
   <option class="2010">2010</option>
   <option class="2011">2011</option>
   <option class="2012">2012</option>
