--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -60,6 +60,7 @@
           Much of the code for the puzzle has already been written. Your task is to write the code that records 
           the user’s best time and stores it within a persistent cookie with a 90-day lifetime 
           (See more details on Canvas and in the textbook).</p>
+	       <p><a href="https://jacksonl11.github.io/ClientSide23/Final%20Project/Project 9-4">Go to project...</a></p>
       </div>
     </div>    
         <footer>
