--- a/Final Project/Project 9-4/index.html
+++ b/Final Project/Project 9-4/index.html
@@ -56,6 +56,10 @@
          Your best time is <span id="best">not yet recorded</span>
       </p>
    </section>
+   
 </body>
+   <footer>
+        <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
+   </footer>
 </html>
 
