--- a/Final Project/Project 9-4/index.html
+++ b/Final Project/Project 9-4/index.html
@@ -15,6 +15,7 @@
    <meta charset="utf-8" />
    <title>Hands-on Project 9-4</title>
    <link rel="stylesheet" href="styles.css" />
+   <script src="javascript.js" defer></script>
  
    <script src="library.js" defer></script>
 </head>
