--- a/Final Project/Project 4-4/index.html
+++ b/Final Project/Project 4-4/index.html
@@ -6,8 +6,8 @@
       Chapter 4
       Hands-on Project 4-4
 
-      Author: 
-      Date:   
+      Author: Jackson Lawrence
+      Date:   4/25/23
 
       Filename: project04-04.html
    -->
