--- a/Final Project/Project 2-4/index.html
+++ b/Final Project/Project 2-4/index.html
@@ -16,6 +16,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <title>Hands-on Project 2-4</title>
    <link rel="stylesheet" href="styles.css" />
+   <script src="javascript.js" defer></script>
 </head>
 
 <body>
