--- a/Final Project/Project 3-1/index.html
+++ b/Final Project/Project 3-1/index.html
@@ -45,5 +45,8 @@
       </aside>
    </article>
 </body>
+   <footer>
+        <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
+   </footer>
 </html>
 
