--- a/Final Project/Project 3-4/index.html
+++ b/Final Project/Project 3-4/index.html
@@ -7,8 +7,8 @@
       Chapter 3
       Hands-on Project 3-4
 
-      Author: 
-      Date:   
+      Author: Jackson Lawrence
+      Date:   04/25/23
 
       Filename: project03-04.html
    -->
