--- a/Final Project/Project 4-4/index.html
+++ b/Final Project/Project 4-4/index.html
@@ -15,6 +15,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <title>Hands-on Project 4-4</title>
    <link rel="stylesheet" href="styles.css" />
+   <script src="javascript.js" defer></script>
 </head>
 
 <body>
@@ -55,5 +56,8 @@
    </article>
    
 </body>
+   <footer>
+       <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
+  </footer>
 </html>
 
