--- a/Final Project/Project 3-1/index.html
+++ b/Final Project/Project 3-1/index.html
@@ -1,4 +1,9 @@
 
+
+Tyree EddingsMo
+6:50 PM (28 minutes ago)
+to conner.garris, me
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,8 +12,8 @@
       Chapter 3
       Hands-on Project 3-1
 
-      Author: 
-      Date:   
+      Author: Jackson Lawrence
+      Date:  04/25/23
 
       Filename: project03-01.html
    -->
@@ -16,7 +21,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <title>Hands-on Project 3-1</title>
    <link rel="stylesheet" href="styles.css" />
-   <script src="javascript.js" defer></script>
+   <script src="project03-01_txt.js" defer></script>
 </head>
 
 <body>
@@ -29,24 +34,59 @@
    <article>
       <h2>Lunch selections</h2>
       <form>
-         <input type="checkbox" class="menuItem" id="item1" value="11.95" />
          <label for="item1">Fried chicken ($11.95)</label>
-         <input type="checkbox" class="menuItem" id="item2" value="13.95" />
+         <input type="number" id="item1" value="0" min="0" max="10">
+         <br>
          <label for="item2">Fried halibut ($13.95)</label>
-         <input type="checkbox" class="menuItem" id="item3" value="10.95" />
+         <input type="number" id="item2" value="0" min="0" max="10">
+         <br>
          <label for="item3">Hamburger ($10.95)</label>
-         <input type="checkbox" class="menuItem" id="item4" value="17.95" />
+         <input type="number" id="item3" value="0" min="0" max="10">
+         <br>
          <label for="item4">Grilled salmon ($17.95)</label>
-         <input type="checkbox" class="menuItem" id="item5" value="8.95" />
+         <input type="number" id="item4" value="0" min="0" max="10">
+         <br>
          <label for="item5">Side salad ($8.95)</label>
+         <input type="number" id="item5" value="0" min="0" max="10">
       </form>
       <aside>
-         Total Order Cost: <span id="billTotal">$0</span>
+         Total Order Cost: $<span id="billTotal">0.00</span>
       </aside>
    </article>
-</body>
-   <footer>
-        <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
-   </footer>
-</html>
 
+   <script>
+      const item1 = document.getElementById('item1');
+      const item2 = document.getElementById('item2');
+      const item3 = document.getElementById('item3');
+      const item4 = document.getElementById('item4');
+      const item5 = document.getElementById('item5');
+
+      const billTotal = document.getElementById('billTotal');
+
+      const menuPrices = {
+         item1: 11.95,
+         item2: 13.95,
+         item3: 10.95,
+         item4: 17.95,
+         item5: 8.95
+      };
+
+      function calculateBillTotal() {
+         const item1Cost = item1.value * menuPrices.item1;
+         const item2Cost = item2.value * menuPrices.item2;
+         const item3Cost = item3.value * menuPrices.item3;
+         const item4Cost = item4.value * menuPrices.item4;
+         const item5Cost = item5.value * menuPrices.item5;
+
+         const total = item1Cost + item2Cost + item3Cost + item4Cost + item5Cost;
+         billTotal.textContent = total.toFixed(2);
+      }
+
+      item1.addEventListener('input', calculateBillTotal);
+      item2.addEventListener('input', calculateBillTotal);
+      item3.addEventListener('input', calculateBillTotal);
+      item4.addEventListener('input', calculateBillTotal);
+      item5.addEventListener('input', calculateBillTotal);
+   </script>
+</body>
+</html>
