--- a/Final Project/Project 2-4/index.html
+++ b/Final Project/Project 2-4/index.html
@@ -7,8 +7,8 @@
       Chapter 2
       Hands-on Project 2-4
 
-      Author:
-      Date:  
+      Author: Jackson Lawrence
+      Date:  04/25/23
 
       Filename: project02-04.html
    -->
@@ -16,7 +16,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <title>Hands-on Project 2-4</title>
    <link rel="stylesheet" href="styles.css" />
-   <script>
+   <script src="javascript.js" defer></script>
    function calculateTotal() {
       var chickenQty = parseInt(document.getElementById('chicken').value);
       var halibutQty = parseInt(document.getElementById('halibut').value);
