--- a/Final Project/Project 2-4/index.html
+++ b/Final Project/Project 2-4/index.html
@@ -17,22 +17,8 @@
    <title>Hands-on Project 2-4</title>
    <link rel="stylesheet" href="styles.css" />
    <script src="javascript.js" defer></script>
-   function calculateTotal() {
-      var chickenQty = parseInt(document.getElementById('chicken').value);
-      var halibutQty = parseInt(document.getElementById('halibut').value);
-      var burgerQty = parseInt(document.getElementById('burger').value);
-      var salmonQty = parseInt(document.getElementById('salmon').value);
-      var saladQty = parseInt(document.getElementById('salad').value);
+ 
 
-      var foodTotal = chickenQty * 10.95 + halibutQty * 13.95 + burgerQty * 9.95 + salmonQty * 18.95 + saladQty * 7.95;
-      var foodTax = foodTotal * 0.1;
-      var totalBill = foodTotal + foodTax;
-
-      document.getElementById('foodTotal').innerHTML = '$' + foodTotal.toFixed(2);
-      document.getElementById('foodTax').innerHTML = '$' + foodTax.toFixed(2);
-      document.getElementById('totalBill').innerHTML = '$' + totalBill.toFixed(2);
-   }
-   </script>
 </head>
 
 <body>
@@ -65,3 +51,7 @@
       <span id="foodTax">$0.00</span>
       <span id="billLab">TOTAL</span>
      <span id="totalBill">0.00</span>
+<footer>
+      <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
+   </body>
+   </footer>
