--- a/Final Project/Project 2-4/index.html
+++ b/Final Project/Project 2-4/index.html
@@ -1,14 +1,11 @@
-
-<!DOCTYPE html>
-<html>
 <head>
    <!--
       JavaScript 6th Edition
       Chapter 2
       Hands-on Project 2-4
 
-      Author: Jackson Lawrence
-      Date:  04/25/23
+      Author:
+      Date:  
 
       Filename: project02-04.html
    -->
@@ -17,8 +14,6 @@
    <title>Hands-on Project 2-4</title>
    <link rel="stylesheet" href="styles.css" />
    <script src="javascript.js" defer></script>
- 
-
 </head>
 
 <body>
@@ -51,7 +46,3 @@
       <span id="foodTax">$0.00</span>
       <span id="billLab">TOTAL</span>
      <span id="totalBill">0.00</span>
-      </body>
-
-      <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
-  
