--- a/Final Project/Project 2-4/index.html
+++ b/Final Project/Project 2-4/index.html
@@ -46,3 +46,5 @@
       <span id="foodTax">$0.00</span>
       <span id="billLab">TOTAL</span>
      <span id="totalBill">0.00</span>
+      </body>
+       <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
