--- a/Final Project/Project 3-1/index.html
+++ b/Final Project/Project 3-1/index.html
@@ -4,7 +4,7 @@
 
    <title>Hands-on Project 3-1</title>
    <link rel="stylesheet" href="styles.css" />
-   <script src="project03-01_txt.js" defer></script>
+   <script src="javascript.js" defer></script>
 </head>
 <body>
    <header>
@@ -46,3 +46,4 @@
      </aside>
    </article>
 </body>
+       <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
