--- a/Final Project/Project 3-1/index.html
+++ b/Final Project/Project 3-1/index.html
@@ -1,10 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+   <!--
+      JavaScript 7th Edition
+      Chapter 3
+      Hands-on Project 3-1
 
-<meta charset="utf-8" />
+      Author: 
+      Date:   
+
+      Filename: project03-01.html
+   -->
+meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
    <title>Hands-on Project 3-1</title>
    <link rel="stylesheet" href="styles.css" />
-   <script src="javascript.js" defer></script>
+   <script src="project03-01_txt.js" defer></script>
 </head>
 <body>
    <header>
@@ -45,5 +57,6 @@
 
      </aside>
    </article>
-</body>
-       <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
+   </body>
+      <a href="https://jacksonl11.github.io/ClientSide23/Final%20Project">Go to Final Project Home...</a>
+   
