--- a/Final Project/Project 3-1/index.html
+++ b/Final Project/Project 3-1/index.html
@@ -11,12 +11,12 @@
 
       Filename: project03-01.html
    -->
-meta charset="utf-8" />
+<meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
    <title>Hands-on Project 3-1</title>
    <link rel="stylesheet" href="styles.css" />
-   <script src="project03-01_txt.js" defer></script>
+   <script src="javascript.js" defer></script>
 </head>
 <body>
    <header>
